Add icons container with animated Font Awesome icons
Added a new icons container with animated icons.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,17 @@
     <button class="icon-btn"><i class="fa-solid fa-bars"></i></button>
     <main>
       <h1 class="teste">Teste</h1>
+
+       <div class="icons-container">
+    <i class="fa-solid fa-star icon-glow"></i>
+    <i class="fa-solid fa-gear icon-spin"></i>
+    <i class="fa-solid fa-heart icon-heartbeat"></i>
+    <i class="fa-solid fa-bell icon-wobble"></i>
+    <i class="fa-solid fa-arrow-down-long fade-up"></i>
+    <i class="fa-solid fa-bolt icon-blink"></i>
+    <i class="fa-solid fa-rocket icon-bounce"></i>
+    <i class="fa-solid fa-shuffle icon-flip"></i>
+  </div>
     </main>
 
    <script src="./script.js"></script>
